--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -273,18 +273,30 @@ ggplot(subset(pheno.characteristics, cluster %in% kept.species),
 
 ```{r plot_pheno_trees, fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE, fig.keep = 'none', fig.ext='svg', custom.plot=TRUE, fig.num=nphyla}
 
+# Put me in a tryCatch since very small trees seem to be failing rn
 if (!params$skip_graphs) { 
 	for (pn in 1:length(plotted.pheno.trees)) {
 		p <- plotted.pheno.trees[[pn]]$tree
 		xlim <- plot(plotted.pheno.trees[[pn]]$rphy, plot = FALSE)$x.lim
-		hack.tree.labels(p + geom_tiplab() + ggplot2::xlim(xlim[1], xlim[2]),
-			fig_path('svg', number = pn),
-			stroke.scale = 0.3, 
-			pheno = 100*logistic(phenotype),
-			units="%",
-			pheno.name = params$which_phenotype)
+		tryCatch(
+			hack.tree.labels(p + geom_tiplab() + ggplot2::xlim(xlim[1], xlim[2]),
+				fig_path('svg', number = pn),
+				stroke.scale = 0.3, 
+				pheno = 100*logistic(phenotype),
+				units="%",
+				pheno.name = params$which_phenotype),
+			error = function(e) {
+				warning(e)
+				# Fall back to non-interactive
+				non.int <- xmlSVG(print(p + 
+					geom_tiplab() +
+						ggplot2::xlim(xlim[1], xlim[2])),
+					standalone = TRUE)
+				write_xml(non.int, fig_path('svg', number = pn))
+		})
 	}
 }
+
 write.table(file=file.path(ODir, "phenotype.tab"), phenotype, sep = '\t')
 
 ```
@@ -300,23 +312,6 @@ plotted.pheno.subtrees <- lapply(1:length(trees), function(tn) {
                cName = paste0(names(trees)[tn], ": ", params$which_phenotype),
                plot = FALSE)
 })
-<<<<<<< HEAD
-if (!params$skip_graphs) { 
-	for (pn in 1:length(plotted.pheno.subtrees)) {
-		ps <- plotted.pheno.subtrees[[pn]]
-		rp <- ps$rphy
-		tr <- ps$tree
-		xlim <- plot(plotted.pheno.subtrees[[pn]]$rphy, plot = FALSE)$x.lim
-		#tIDs <- tax.annot(rp$tip.label, taxonomy)
-		#newtr <- (tr %<+% data.frame(
-		#  label = rp$tip.label,
-		#  label2 = tIDs
-		#)) +
-		newtr <- (tr + 
-			geom_tiplab() +
-			ggplot2::xlim(xlim[1], xlim[2])
-		)
-=======
 for (pn in 1:length(plotted.pheno.subtrees)) {
 	ps <- plotted.pheno.subtrees[[pn]]
   rp <- ps$rphy
