--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -51,6 +51,7 @@ dir.create(ODir)
 source("plm-functions.R")
 source("fisher-enrich.R")
 library(dplyr)
+library(Matrix)
 
 if (!params$skip_graphs) { 
 	library(svglite)
@@ -71,14 +72,14 @@ if (!params$skip_graphs) {
 if (params$type == "midas") {
 		SixteenS = FALSE
 	if (params$db_version == "midas_v1.0") {
-		gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.0.rds"))
+		gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-binary-1.0.rds"))
 		trees <- readRDS(file.path(DDir, "MIDAS_1.0-trees.rds"))
 		phyla <- intersect(names(trees), names(gene.presence))
 		taxonomy <- data.frame(fread(file.path(DDir,
 					"MIDAS_1.0-taxonomy.csv")),
 			stringsAsFactors = FALSE)[,-1]
 	} else if (params$db_version == "midas_v1.2") {
-		gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.2.rds"))
+		gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-binary-1.2.rds"))
 		trees <- readRDS(file.path(DDir, "MIDAS_1.2-trees.rds"))
 		phyla <- intersect(names(trees), names(gene.presence))
 		gene.to.fxn <- fread(file.path(DDir, "family.functions"),
@@ -92,7 +93,7 @@ if (params$type == "midas") {
 	}
 } else if (params$type == "16S") {
 	SixteenS = TRUE
-	gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.2.rds"))
+	gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-binary-1.2.rds"))
 	trees <- readRDS(file.path(DDir, "MIDAS_1.2-trees.rds"))
 	phyla <- intersect(names(trees), names(gene.presence))
 	gene.to.fxn <- fread(file.path(DDir, "family.functions"),
