--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -17,8 +17,7 @@ params:
   env_column: "env"
   dset_column: "dataset"
   phenotype_file: ""
-  dada2_file: ""
-  db_version: "midas_v1.0"
+  db_version: "midas_v1.2"
   which_phenotype: "prevalence"
   which_envir: "Stool"
   prior_type: "uninformative"
@@ -27,7 +26,7 @@ params:
   treemin: 5
   assume_below_LOD: TRUE
   skip_graphs: FALSE
-  burst_dir: "/var/www/phylogenize/bin"
+  burst_dir: "./bin"
 ---
 
 # Settings
